8061817: Whitebox.deoptimizeMethod() does not deoptimize all OSR versions of method

Fixed Whitebox.deoptimizeMethod() to deoptimize all OSR versions of the method.

Reviewed-by: kvn, iignatyev